syntax = "proto3";

package profile;
option go_package = "github.com/lanemets/claim-funnel/profile";

message GetProfileByEmailRequest {
  string email = 1;
}

message ProfileExists {
  string profileId = 1;
}

message ProfileNotFound {}

message GetProfileByEmailResponse {

  oneof response {
    ProfileExists exists = 1;
    ProfileNotFound notFound = 2;
  }
}

service ProfilesService {

  rpc GetProfileByEmail (GetProfileByEmailRequest) returns (GetProfileByEmailResponse) {
  }
}